--- a/signup.html
+++ b/signup.html
@@ -100,8 +100,8 @@ button[type="submit"]:hover {
 <label for="Refereename">Referee Full Name:</label>
             <input type="text" id="Refereename" name="Refereename">
             	
-            <label for="Serial no">Serial Number:</label>
-            <input type="text" id="Serial no" name="Serial no" >
+            <label for=" RefereeSerial no">Referee Serial Number:</label>
+            <input type="text" id="RefereeSerial no" name="RefereeSerial no" >
             	
             <label for="Refereephone">Referee Phone Number:</label>
             <input type="tel" id="Refereephone" name="Refereephone">
